--- a/QuizeService/src/main/resources/application.properties
+++ b/QuizeService/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8081
 
 spring.datasource.url=jdbc:mysql://localhost:3306/micro_yt
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=pass
 
 spring.jpa.show.sql=true
 spring.jpa.hibernate.ddl-auto=update
